--- a/html-css/hw-04/css/style.css
+++ b/html-css/hw-04/css/style.css
@@ -191,8 +191,7 @@ h2 {
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
     text-transform: uppercase;
-    position: absolute;
-    
+    margin-top: 0 0 80px 0;
 }
 
 .news_title::after {
@@ -230,7 +229,6 @@ h2 {
     content: '';
     display: block;
     width: 136px;
-    margin: 0 auto;
     height: 3px;
     margin-top: 8px;
     background-color: rgb(78, 198, 171);
