--- a/html-css/hw-04/css/style.css
+++ b/html-css/hw-04/css/style.css
@@ -7,7 +7,7 @@
 .conteiner {
     width: 1110px;
     margin: 0 auto;
-    font-family: 'Open Sans', 'Roboto'sans-serif;
+    font-family: 'Open Sans', 'Roboto' sans-serif;
 }
 
 .clearfix {
@@ -72,22 +72,9 @@
 
 header {
     padding: 38px 0 0 0;
-    margin-bottom: 114px;
 }
 
 /*section featured*/
-
-h1 {
-    color: #515151;
-    font-family: 'Roboto'sans-serif;
-    font-size: 48px;
-    font-weight: 300;
-    line-height: 32px;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-}
 
 h2 {
     color: #ffffff;
@@ -98,17 +85,20 @@ h2 {
     padding: 0;
 }
 
-
 .featured {
-    margin-top: 104px;
+    padding-top: 104px;
+    padding-bottom: 106px;
 }
 
 .featured_title {
     color: #515151;
-    margin: 0 0 100px 0;
     line-height: 32px;
     font-weight: 900;
     font-family: 'Roboto', sans-serif;
+    font-size: 48px;
+    text-transform: uppercase;
+    text-align: center;
+    padding-bottom: 132px;
 }
 
 .featured_title::after {
@@ -176,10 +166,10 @@ h2 {
 }
 
 /* SECTION NEWS */
-.news {
-    margin-top: 104px;
-    margin: 0;
-    padding: 106px 0 80px;
+
+.news {   
+    margin: 0 auto;
+    padding-bottom: 81px; 
 }
 
 .news_title {
@@ -191,8 +181,8 @@ h2 {
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
     text-transform: uppercase;
-    margin-top: 0 0 80px 0;
-}
+    margin-bottom: 80px;
+ }
 
 .news_title::after {
     display: block;
@@ -241,12 +231,11 @@ h2 {
     font-weight: 400;
     line-height: 26px;
     letter-spacing: -0.28px;
-    margin: 0 0 32px 0;
+    padding-bottom: 18px;
 }
 
 .list-feature__link {
     display: block;
-    padding: 18px 44px;
     border-radius: 5px;
     color: rgb(255, 255, 255);
     background-color: rgb(78, 198, 171);
@@ -257,7 +246,13 @@ h2 {
     letter-spacing: -0.32px;
     text-decoration: none;
     width: auto;
+    width: 160px;
+    height: 51px;
+    text-align: center;
+    text-transform: capitalize;
+    padding-top: 10px;
 }
+
 
 .list-feature__link:hover {
     padding: 16px 36px;
