--- a/html-css/hw-05/css/ctyle.css
+++ b/html-css/hw-05/css/ctyle.css
@@ -247,14 +247,15 @@ h2 {
     height: 100%;
     top: 0;
     left: 0;
-    
-    border-width: 1px;
+    background-color: rgba(0, 0, 0, 0.55);
+    border-width: 10px;
     border-color: rgb(255, 255, 255);
     border-style: solid;
+    opacity: 0;
 }
 
 .overlay-wrap:hover {
-    background-color: rgba(0, 0, 0, 0.55);
+    opacity: 1;
 }
 
 .card-position {
@@ -265,11 +266,10 @@ h2 {
     transform: translate(-50%, -50%)
 }
 
-
 .btn {
     width: 50px;
     height: 50px;
-    margin-right: 5px;
+    margin-right: 4px;
     margin-bottom: 7px;
     color: rgb(255, 255, 255);
     background-color: transparent;
@@ -281,7 +281,7 @@ h2 {
     background-color: rgb(26, 188, 156);
 }
 
-.btn:last-child {
+.btn:nth-child(3) {
     margin-right: 0;
 }
 
@@ -356,7 +356,6 @@ h2 {
     font-weight: 900;
     text-transform: uppercase;
 }
-
 
 
 /* FOOTER */
