--- a/html-css/hw-05/css/ctyle.css
+++ b/html-css/hw-05/css/ctyle.css
@@ -297,6 +297,7 @@ h2 {
     border: none;
     outline: 1px solid rgb(255, 255, 255);
     background-color: rgb(50, 50, 50);
+    cursor: pointer;
 }
 
 .btn_cart:hover {
