--- a/html-css/hw-07/css/style.css
+++ b/html-css/hw-07/css/style.css
@@ -52,9 +52,11 @@
      font-style: italic;
      font-weight: 400;
      src: local('Crete Round Italic'), local('CreteRound-Italic'),
-          url('../fonts/crete-round-v8-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-          url('../fonts/crete-round-v8-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-   }
+          url('../fonts/crete-round-v8-latin-italic.woff2') format('woff2'),
+          /* Chrome 26+, Opera 23+, Firefox 39+ */
+          url('../fonts/crete-round-v8-latin-italic.woff') format('woff');
+     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 
 * {
      margin: 0;
@@ -101,7 +103,6 @@ header {
      font-style: normal;
      font-weight: 400;
      font-size: 26px;
-     font-weight: 400;
      line-height: 41px;
      letter-spacing: 1.3px;
 }
@@ -148,8 +149,9 @@ header {
      font-family: "Montserrat", sans-serif;
      font-size: 18px;
      font-weight: 700;
-     line-height:74px;
+     line-height: 74px;
 }
+
 .service-title {
      margin-bottom: 100px;
 }
@@ -219,14 +221,14 @@ header {
 
 .contact-title__main {
      color: rgb(255, 255, 255);
-     font-family: 'Montserrat'sans-serif;
+     font-family: 'Montserrat', sans-serif;
      font-style: normal;
      font-weight: 700;
 }
 
 .title__sub {
      color: rgb(119, 119, 119);
-     font-weight: 400;     
+     font-weight: 400;
      font-family: 'Crete Round';
      font-style: italic;
      font-weight: 400;
@@ -241,7 +243,7 @@ header {
      height: 100%;
      margin-bottom: 29px;
      text-transform: uppercase;
-}  
+}
 
 input:not([type="submit"]) {
      width: 450px;
