--- a/html-css/hw-07/css/style.css
+++ b/html-css/hw-07/css/style.css
@@ -242,7 +242,6 @@ header {
      max-height: 210px;
      height: 100%;
      margin-bottom: 29px;
-     text-transform: uppercase;
 }
 
 input:not([type="submit"]) {
@@ -304,4 +303,32 @@ input:not([type="submit"]) {
 
 input:nth-child(3) {
      margin-bottom: 0;
+}
+
+.footer_form input {
+     color: #bbbbbb;
+     font-size: 14px;
+     text-transform: uppercase;
+     font-family: 'Montserrat', sans-serif;
+     font-weight: 700;
+     padding: 9px 54px 9px 10px;
+     outline: none;
+     border: none;
+}
+
+.message {
+     display: block;
+     margin: 0 auto;
+     border-radius: 3px;
+     background-color: rgb(254, 209, 54);
+     border-color: rgb(254, 209, 54);
+     width: 240px;
+     height: 66px;
+     font-size: 14px;
+     text-transform: uppercase;
+     font-family: 'Montserrat', sans-serif;
+     font-weight: 700;
+     color: #ffffff;
+     cursor: pointer;
+     outline: none;
 }
