--- a/html-css/hw-07/css/style.css
+++ b/html-css/hw-07/css/style.css
@@ -306,17 +306,7 @@ input:nth-child(3) {
      margin-bottom: 0;
 }
 
-.footer_form input {
-     color: #bbbbbb;
-     font-size: 14px;
-     text-transform: uppercase;
-     font-weight: 700;
-     padding: 9px 54px 9px 10px;
-     outline: none;
-     border: none;
-}
-
-.message {
+.message_btn {
      display: block;
      margin: 0 auto;
      border-radius: 3px;
@@ -329,5 +319,12 @@ input:nth-child(3) {
      font-weight: 700;
      color: #ffffff;
      cursor: pointer;
-     outline: none;
+}
+
+input::placeholder,
+textarea::placeholder {
+     text-transform: uppercase;
+     color: #bbbbbb;
+     font-size: 14px;
+     font-weight: 700;
 }
