--- a/html-css/hw-06/css/style.css
+++ b/html-css/hw-06/css/style.css
@@ -108,7 +108,7 @@ header {
     content: "";
     height: 3px;
     width: 0%;
-    transition: width 0.2s linear;
+    transition: width 200ms linear;
 }
 
 .navigation-list__link:hover:after,
@@ -157,6 +157,7 @@ input[type="radio"].visually-hidden {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    width: 1100px;
 }
 
 .service-item {
@@ -211,7 +212,6 @@ input[type="radio"].visually-hidden {
     font-size: 14px;
     font-weight: 400;
     text-transform: uppercase;
-
 }
 
 .service-item__text {
@@ -222,6 +222,7 @@ input[type="radio"].visually-hidden {
 }
 
 /* SECTION TEAM */
+
 .team {
     padding: 78px 0;
 }
@@ -318,10 +319,12 @@ input[type="radio"].visually-hidden {
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 72px;
+    bottom: 0;
     left: 0;
-    height: 100%;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
 
 .overlay-list {
     display: none;
@@ -331,9 +334,7 @@ input[type="radio"].visually-hidden {
 }
 
 .overlay-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
     list-style-type: none;
     height: 56px;
     width: 56px;
