--- a/html-css/hw-08/css/ctyle.css
+++ b/html-css/hw-08/css/ctyle.css
@@ -137,117 +137,220 @@ h3 {
 }
 
 .dreams__title {
-  margin-bottom: 12px;
-  text-transform: uppercase;
+    margin-bottom: 12px;
+    text-transform: uppercase;
 }
 
 .dreams__text {
-  margin: 0 auto;
-  width: 220px;
-  color: rgb(255, 255, 255);
-  font-size: 18px;
-  margin-bottom: 33px;
+    margin: 0 auto;
+    width: 220px;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    margin-bottom: 33px;
 }
 
 .dreams__link {
-  padding: 13px 52px;
-  background-color: rgb(255, 78, 80);
+    padding: 13px 52px;
+    background-color: rgb(255, 78, 80);
 }
 
 .dreams__link:hover {
-  color: rgb(255, 78, 80);
-  background-color: rgb(255, 255, 255);
+    color: rgb(255, 78, 80);
+    background-color: rgb(255, 255, 255);
 }
 
 .partners {
-  padding: 69px 0;
+    padding: 69px 0;
 }
 
 .partners-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .title {
-  display: block;
-  width: 282px;
-  color: rgb(51, 51, 51);
-  font-size: 22px;
-  text-align: center;
-  margin-bottom: 15px;
+    display: block;
+    width: 282px;
+    color: rgb(51, 51, 51);
+    font-size: 22px;
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 .team__item {
-  width: 220px;
-  list-style-type: none;
-  margin-bottom: 24px;
-  text-align: center;
+    width: 220px;
+    list-style-type: none;
+    margin-bottom: 24px;
+    text-align: center;
 }
 
 .team__item-wrap {
-  display: block;
-  position: relative;
+    display: block;
+    position: relative;
 }
 
 .team__item-wrap::after {
-  content: "";
-  display: block;
-  width: 33px;
-  height: 33px;
-  position: absolute;
-  right: 45px;
-  bottom: 0;
-  border: 4px solid rgb(255, 255, 255);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 50% 50%;
-  border-radius: 50px;
+    content: "";
+    display: block;
+    width: 33px;
+    height: 33px;
+    position: absolute;
+    right: 45px;
+    bottom: 0;
+    border: 4px solid rgb(255, 255, 255);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+    border-radius: 50px;
 }
 
 .icon-tv::after {
-  background-image: url("../img/tv.png");
-  background-color: rgb(255, 78, 80);
+    background-image: url("../img/tv.png");
+    background-color: rgb(255, 78, 80);
 }
 
 .icon-flask::after {
-  background-image: url("../img/flask.png");
-  background-color: rgb(255, 165, 7);
+    background-image: url("../img/flask.png");
+    background-color: rgb(255, 165, 7);
 }
+
 .icon-coffee::after {
-  background-image: url("../img/coffee.png");
-  background-color: rgb(28, 215, 173);
+    background-image: url("../img/coffee.png");
+    background-color: rgb(28, 215, 173);
 }
 
 .icon-telegram::after {
-  background-image: url("../img/telegram.png");
-  background-color: rgb(78, 115, 219);
+    background-image: url("../img/telegram.png");
+    background-color: rgb(78, 115, 219);
 }
 
 .team__item-wrap {
-  margin-bottom: 14px;
+    margin-bottom: 14px;
 }
 
 .team__item-title {
-  margin-bottom: 14px;
+    margin-bottom: 14px;
 }
 
 .team__item-text {
-  color: rgb(102, 102, 102);
-  font-size: 14px;
-  margin-bottom: 14px;
+    color: rgb(102, 102, 102);
+    font-size: 14px;
+    margin-bottom: 14px;
 }
 
 .team__link {
-  padding: 13px 74px;
-  color: rgb(255, 78, 80);
-  background-color: rgb(255, 255, 255);
+    padding: 13px 74px;
+    color: rgb(255, 78, 80);
+    background-color: rgb(255, 255, 255);
 }
 
 .team__link:hover {
-  color: rgb(255, 255, 255);
-  background-color: rgb(255, 78, 80);
-  cursor: pointer;
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 78, 80);
+    cursor: pointer;
 }
 
+@media (min-width: 768px) {
+    .container {
+        width: 670px;
+        margin: 0 auto;
+    }
+    
+    .wrap__holiday-dreams {
+        min-height: 700px;
+        text-align: center;
+        background: no-repeat url("../img/bg_tablet.png") center top;
+        object-fit: cover;
+        background-size: cover;
+    }
 
+    .head-container {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+    }
+
+    .registration-wrap {
+        margin-bottom: 60px;
+    }
+
+    .dreams-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .dreams__title {
+        width: 510px;
+        font-size: 52px;
+        margin-bottom: 40px;
+    }
+
+    .dreams__text {
+        width: 400px;
+    }
+
+    .title {
+        width: 420px;
+        margin-bottom: 22px;
+    }
+
+    .team__list {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 0 100px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .container {
+      width: 940px;
+      margin: 0 auto;
+    }
+    .wrap__holiday-dreams {
+        min-height: 700px;
+        text-align: center;
+        background: no-repeat url("../img/bg_desktop.png") center top;
+        object-fit: cover;
+        background-size: cover;
+    }
+    .head-container {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row-reverse;
+    }
+  
+    .registration-wrap {
+      margin-bottom: 60px;
+    }
+  
+    .dreams-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .dreams__title {
+      width: 510px;
+      font-size: 52px;
+      margin-bottom: 40px;
+    }
+  
+    .dreams__text {
+      width: 400px;
+    }
+  
+    .title {
+      width: 420px;
+      margin-bottom: 22px;
+    }
+  
+    .team__list {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+  }
+  
