--- a/html-css/hw-08/css/ctyle.css
+++ b/html-css/hw-08/css/ctyle.css
@@ -101,6 +101,7 @@ h3 {
     height: 100%;
     text-align: center;
     background: no-repeat url("../img/bg_mobile.png") center top;
+    background-color: rgb(26, 25, 21);
     object-fit: cover;
     background-size: cover;
     background-color: rgb(26, 25, 21);
@@ -256,11 +257,12 @@ h3 {
         width: 670px;
         margin: 0 auto;
     }
-    
+
     .wrap__holiday-dreams {
         min-height: 700px;
         text-align: center;
         background: no-repeat url("../img/bg_tablet.png") center top;
+        background-color: rgb(26, 25, 21);
         object-fit: cover;
         background-size: cover;
     }
@@ -306,51 +308,54 @@ h3 {
 
 @media (min-width: 1024px) {
     .container {
-      width: 940px;
-      margin: 0 auto;
+        width: 942px;
+        margin: 0 auto;
     }
+
     .wrap__holiday-dreams {
         min-height: 700px;
         text-align: center;
         background: no-repeat url("../img/bg_desktop.png") center top;
+        background-color: rgb(26, 25, 21);
         object-fit: cover;
         background-size: cover;
     }
+
     .head-container {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: row-reverse;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
     }
-  
+
     .registration-wrap {
-      margin-bottom: 60px;
+        margin-bottom: 60px;
     }
-  
+
     .dreams-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-  
+
     .dreams__title {
-      width: 510px;
-      font-size: 52px;
-      margin-bottom: 40px;
+        width: 510px;
+        font-size: 52px;
+        margin-bottom: 40px;
     }
-  
+
     .dreams__text {
-      width: 400px;
+        width: 400px;
     }
-  
+
     .title {
-      width: 420px;
-      margin-bottom: 22px;
+        width: 420px;
+        margin-bottom: 22px;
     }
-  
+
     .team__list {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 0 30px;
     }
-  }
-  
+}
